# src/controllers/pizza.ts
@@ -1,12 +1,14 @@
 import { Request, Response } from 'express';
 import { HttpStatus } from '../library/enums';
 import pizzasService from '../services/pizza';
+import { IPizza } from '../models/pizzas';
 
 const create = (req: Request, res: Response) => {
   // #swagger.tags = ['Pizzas']
-  const dto = req.body;
-  return pizzasService
-    .create(dto)
+  const { desc, extraOptions, sizes, title, img } = req.body;
+
+  pizzasService
+    .create({ desc, extraOptions, sizes, title, img })
     .then((pizza) => res.status(HttpStatus.CREATED).json({ pizza }))
     .catch((err) =>
       res
@@ -17,9 +19,52 @@ const create = (req: Request, res: Response) => {
 
 const readAll = (req: Request, res: Response) => {
   // #swagger.tags = ['Pizzas']
-  return pizzasService
+  pizzasService
     .readAll()
     .then((pizzas) => res.status(HttpStatus.OK).json({ pizzas }))
+    .catch((err) =>
+      res
+        .status(HttpStatus.INTERNAL_SERVER_ERROR)
+        .json({ message: err.message }),
+    );
+};
+
+const readById = (req: Request, res: Response) => {
+  // #swagger.tags = ['Pizzas']
+  const id = req.params.id;
+
+  pizzasService
+    .readById(id)
+    .then((pizza) => res.status(HttpStatus.OK).json(pizza))
+    .catch((err) =>
+      res
+        .status(HttpStatus.INTERNAL_SERVER_ERROR)
+        .json({ message: err.message }),
+    );
+};
+
+const updateById = (req: Request, res: Response) => {
+  // #swagger.tags = ['Pizzas']
+  const id = req.params.id;
+  const { desc, extraOptions, sizes, title, img } = req.body;
+
+  pizzasService
+    .updateById(id, { desc, extraOptions, sizes, title, img })
+    .then((pizza) => res.status(HttpStatus.OK).json(pizza))
+    .catch((err) =>
+      res
+        .status(HttpStatus.INTERNAL_SERVER_ERROR)
+        .json({ message: err.message }),
+    );
+};
+
+const deleteById = (req: Request, res: Response) => {
+  // #swagger.tags = ['Pizzas']
+  const id = req.params.id;
+
+  pizzasService
+    .deleteById(id)
+    .then((pizza) => res.status(HttpStatus.OK).json(pizza))
     .catch((err) =>
       res
         .status(HttpStatus.INTERNAL_SERVER_ERROR)
@@ -30,6 +75,9 @@ const readAll = (req: Request, res: Response) => {
 const pizzasController = {
   create,
   readAll,
+  readById,
+  updateById,
+  deleteById,
 };
 
 export default pizzasController;
